# cineville

./: .gitignore  Dockerfile  Makefile  README.md  ci.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: data_model.drawio
src/: __init__.py  main.py  models.py  processor.py  reader.py  reporter.py  validator.py  writer.py
src/cineville_csv_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_main.py  test_processor.py  test_reader.py  test_reporter.py  test_validator.py  test_writer.py
